# flow

./: .bazelrc  .clang-format  .gitignore  .pre-commit-config.yaml  .travis.yml  BUILD  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  README_DOXYGEN.md  WORKSPACE  flow_rules.bzl  index.html
.github/workflows/: c-cpp.yml  cpp-bazel.yml  cpp-cmake.yml  dox.yml  doxygen.yml  pr.yml  pre-commit.yml
bazel/: flow_rules.bzl
cmake/: flowConfig.cmake.in
doxygen-out/html/: annotated.html  any__before_8h_source.html  apply_8hpp_source.html  batch_8h.html  batch_8h__incl.dot  batch_8h__incl.map  batch_8h__incl.md5  batch_8h_source.html  before_8h.html  before_8h__incl.dot  before_8h__incl.map  before_8h__incl.md5  before_8h_source.html  captor_8h.html  captor_8h__incl.dot  captor_8h__incl.map  captor_8h__incl.md5  captor_8h_source.html  captor_8hpp_source.html  captor__interface_8hpp_source.html  captor__state_8h.html  captor__state_8h_source.html  captor__state_8hpp_source.html  captor__state__ostream_8h_source.html  captor__state__ostream_8hpp_source.html  chrono_8h_source.html  chrono_8hpp_source.html  chunk_8h_source.html  classes.html  classflow_1_1_captor-members.html  classflow_1_1_captor.html  classflow_1_1_captor_3_01_captor_t_00_01_no_lock_00_01_queue_monitor_t_01_4-members.html  classflow_1_1_captor_3_01_captor_t_00_01_no_lock_00_01_queue_monitor_t_01_4.html  classflow_1_1_captor_3_01_captor_t_00_01_no_lock_00_01_queue_monitor_t_01_4__coll__graph.map  classflow_1_1_captor_3_01_captor_t_00_01_no_lock_00_01_queue_monitor_t_01_4__coll__graph.md5  classflow_1_1_captor_3_01_captor_t_00_01_no_lock_00_01_queue_monitor_t_01_4__inherit__graph.map  classflow_1_1_captor_3_01_captor_t_00_01_no_lock_00_01_queue_monitor_t_01_4__inherit__graph.md5  classflow_1_1_captor_3_01_captor_t_00_01_polling_lock_3_01_basic_lockable_t_01_4_00_01_queue_monitor_t_01_4-members.html  classflow_1_1_captor_3_01_captor_t_00_01_polling_lock_3_01_basic_lockable_t_01_4_00_01_queue_monitor_t_01_4.html  classflow_1_1_captor_3_01_captor_t_00_01_polling_lock_3_01_basic_lockable_t_01_4_00_01_queue_monitor_t_01_4__coll__graph.map  (+611 more)
doxygen-out/latex/: annotated.tex  batch_8h.tex  batch_8h__incl.dot  batch_8h__incl.md5  before_8h.tex  before_8h__incl.dot  before_8h__incl.md5  captor_8h.tex  captor_8h.tex.tmp  captor_8h__incl.dot  captor_8h__incl.md5  captor__state_8h.tex  classflow_1_1_captor.tex  classflow_1_1_captor_3_01_captor_t_00_01_no_lock_00_01_queue_monitor_t_01_4.tex  classflow_1_1_captor_3_01_captor_t_00_01_no_lock_00_01_queue_monitor_t_01_4__coll__graph.md5  classflow_1_1_captor_3_01_captor_t_00_01_no_lock_00_01_queue_monitor_t_01_4__inherit__graph.md5  classflow_1_1_captor_3_01_captor_t_00_01_polling_lock_3_01_basic_lockable_t_01_4_00_01_queue_monitor_t_01_4.tex  classflow_1_1_captor_3_01_captor_t_00_01_polling_lock_3_01_basic_lockable_t_01_4_00_01_queue_monitor_t_01_4__coll__graph.md5  classflow_1_1_captor_3_01_captor_t_00_01_polling_lock_3_01_basic_lockable_t_01_4_00_01_queue_monitor_t_01_4__inherit__graph.md5  classflow_1_1_captor__coll__graph.dot  classflow_1_1_captor__coll__graph.md5  classflow_1_1_captor__inherit__graph.dot  classflow_1_1_captor__inherit__graph.md5  classflow_1_1_captor_interface.tex  classflow_1_1_captor_interface__coll__graph.dot  classflow_1_1_captor_interface__coll__graph.md5  classflow_1_1_dispatch.tex  classflow_1_1_dispatch_queue.tex  classflow_1_1_driver.tex  classflow_1_1_follower.tex  (+211 more)
flow/: BUILD  README.md
test/: BUILD  CMakeLists.txt  dispatch.cpp  dispatch_queue.cpp  gtest-main.cpp  synchronizer.cpp  synchronizer_st_example.cpp
test/driver/: BUILD  chunk.cpp
test/flow/: BUILD  captor.cpp  dispatch.cpp  dispatch_queue.cpp  synchronizer.cpp  synchronizer_mt_example.cpp  synchronizer_st_example.cpp
test/flow/driver/: BUILD  batch.cpp  chunk.cpp  next.cpp  throttled.cpp
test/flow/follower/: BUILD  any_at_or_before.cpp  any_before.cpp  before.cpp  closest_before.cpp  count_before.cpp  latched.cpp  matched_stamp.cpp  ranged.cpp
test/flow/utility/: apply.cpp
test/follower/: BUILD  closest_before.cpp  count_before.cpp  matched_stamp.cpp  ranged.cpp
(+293 files in other folders)
